# auto-sentinel

./: .env.example  .gitignore  CLAUDE.md  DEBT.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  scenario-authorship.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
autosentinel/: __init__.py  __main__.py  benchmark.py  graph.py  models.py  multi_agent_graph.py  tracing.py
autosentinel/agents/: _artifact_normalizer.py  _producer_contract.py  base.py  code_fixer.py  diagnosis.py  infra_sre.py  security_reviewer.py  state.py  supervisor.py  verifier.py
autosentinel/api/: logging.py  main.py  models.py  queue.py  results.py
autosentinel/llm/: _placeholder_responses.py  ark_client.py  cost_guard.py  errors.py  factory.py  glm_client.py  mock_client.py  pricing.py  protocol.py
autosentinel/nodes/: __init__.py  analyze_error.py  execute_fix.py  format_report.py  parse_log.py
benchmarks/scenarios/: 001_code_null_user_context.yaml  002_infra_db_connection_refused.yaml  003_config_jwt_secret_missing.yaml  004_security_sql_injection_attempt.yaml  005_code_weird_exception.yaml  006_code_index_out_of_range.yaml  007_code_division_by_zero.yaml  008_code_key_error_dict.yaml  009_code_type_mismatch.yaml  010_code_attribute_error.yaml  011_code_unhandled_exception.yaml  012_code_infinite_recursion.yaml  013_code_off_by_one_loop.yaml  014_code_json_parse_error.yaml  015_code_unicode_decode_error.yaml  016_infra_db_connection_pool_exhausted.yaml  017_infra_dns_resolution_failure.yaml  018_infra_disk_space_full.yaml  019_infra_memory_oom_killed.yaml  020_infra_service_unavailable_503.yaml  021_infra_tls_certificate_expired.yaml  022_infra_load_balancer_timeout.yaml  023_infra_port_already_in_use.yaml  024_infra_network_partition.yaml  025_infra_rate_limit_exceeded.yaml  026_infra_container_restart_loop.yaml  027_infra_volume_mount_failure.yaml  028_infra_clock_skew.yaml  029_infra_file_descriptor_limit.yaml  030_security_command_injection.yaml  031_security_path_traversal.yaml  032_security_hardcoded_credentials.yaml  033_security_xss_stored.yaml  034_security_insecure_deserialization.yaml  035_security_weak_crypto_detected.yaml  036_security_suspicious_login_alert.yaml  037_config_missing_env_var.yaml  038_config_invalid_yaml_syntax.yaml  039_config_wrong_data_type.yaml  040_config_port_misconfiguration.yaml  (+10 more)
config/: model_routing.yaml
data/: crash-config.json  crash-connectivity.json  crash-resource.json
data/benchmark/: benchmark-code.json  benchmark-config.json  benchmark-infra.json  benchmark-security.json  benchmark-unknown.json
data/routing-eval/: held_out_v1.yaml
docs/: PROJECT.md
infra/: docker-compose.checkpointer.yml
output/: benchmark-report.json
scripts/: check_endpoints.py  check_scenario_authorship.py  run_benchmark.py  run_holdout_eval.py  send_real_trace.py
specs/001-core-diagnostic-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-event-gateway/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-docker-sandbox/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-multi-agent-migration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-real-llm-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-fix-verification-integrity/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/m4-mcp-enabler/: plan.md  spec.md  tasks.md
tests/: conftest.py  test_benchmark.py
tests/benchmark_smoke/: test_smoke_benchmark.py
tests/integration/: _pr4_helpers.py  _resume_worker.py  test_api.py  test_cost_guard_pipeline.py  test_fix_artifact_contract.py  test_mcp_enabler_api.py  test_multi_agent_graph_routing.py  test_multi_agent_graph_security.py  test_pipeline.py  test_postgres_checkpointer.py  test_resume_endpoint.py  test_trace_propagation.py
tests/unit/: _llm_fixtures.py  test_analyze_error.py  test_api_logging.py  test_api_models.py  test_ark_client.py  test_artifact_normalizer.py  test_benchmark_scenarios_yaml.py  test_benchmark_schema.py  test_checkpointer_guard.py  test_code_fixer_agent.py  test_cost_guard.py  test_diagnosis_agent.py  test_docker_import_boundary.py  test_execute_fix.py  test_format_report.py  test_glm_client.py  test_infra_sre_agent.py  test_llm_coverage_gaps.py  test_llm_protocol.py  (+11 more)
(+68 files in other folders)
