[project]
name = "autosentinel"
version = "0.1.0"
description = "AI-Native Observability & Self-Healing Agent System — Core Diagnostic Engine"
requires-python = ">=3.11"
dependencies = [
    "langgraph==1.1.9",
    "langgraph-checkpoint-postgres",
    "psycopg[binary]>=3.1",
    "openai>=1.40",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "tenacity",
    "pydantic-settings",
    "pyyaml",
    "python-dotenv>=1.2.2",
    "docker>=7.1.0",
]

[tool.uv.sources]
# Observability/tracing package (LLMTracer -> Langfuse). Local sibling repo,
# editable so dashboard changes reflect without reinstall. Declared under the
# optional `tracing` extra: the agent clients import it under try/except and
# fall back to nullcontext when absent, so the hermetic suite stays green and
# 100%-branch-coverage holds without it. Install it (uv sync --extra tracing)
# for US4 trace correlation / T068 end-to-end.
llmops-dashboard = { path = "../llmops-dashboard", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
tracing = [
    "llmops-dashboard",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["autosentinel*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# Sprint 6 US3 (contracts/ci-gate.md): baseline lint/type gates — pragmatic
# first, tightening is future work (see DEBT.md if exclusions accumulate).
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# defaults (E4/E7/E9 + F) — correctness-focused baseline

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# baseline: no strict flags; the gate must land green before it tightens.
# typeddict-item disabled: agents return PARTIAL AgentState updates (the
# LangGraph state-channel reducer idiom); modelling that properly needs a
# total=False update type — tracked in DEBT.md.
disable_error_code = ["typeddict-item"]

[tool.coverage.run]
source = ["autosentinel"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 100
